fix vertical aligns

--- a/styles.css
+++ b/styles.css
@@ -124,21 +124,23 @@ main {
 
 #pricing {
   display: flex;
+  margin-bottom: 20px;
 }
 
 .price-block {
   border-style: solid;
   border-width: 1px;
+  border-radius: 3px;
   width: 250px;
-  height: 300px;
-  margin: 10 10 10 10;
+  height: 310px;
+  margin: 10 10 20 10;
 }
 
 .price-header {
   background-color: lightgray;
-  text-align: center;
-  /* vertical-align: middle; */
-  /* align-self: center; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 45px;
   margin-bottom: 10px;
 }
@@ -173,26 +175,34 @@ main {
 }
 
 footer {
-  height: 80px;
+  height: 60px;
   width: 100%;
   background-color: lightgray;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10 0 10 0;
 }
 
-.links {
-  /* replace with vertical align */
-  padding-top: 10px;
+.footer-links ul {
   text-align: right;
+  margin: 5 10 0 10;
 }
 
-.link {
-  margin: 10 10 5 10;
+.footer-links li {
+ display: inline;
+}
+
+.footer-link {
+  margin: 0 10 0 10;
   text-decoration: none;
   color: black;
 }
 
 .copyright {
   text-align: right;
-  margin: 5 10 5 10;
+  margin: 0 10 5 10;
 }
 
 @media (max-width: 600px) {
